fix datepicker wrap

--- a/src/sass/components/_datepicker.scss
+++ b/src/sass/components/_datepicker.scss
@@ -11,7 +11,7 @@
   .datepicker-date-input,
   .datepicker-time-input {
     &::placeholder {
-      font-size: 11px;
+      font-size: 10px;
       color: hsla(0, 0%, 100%, .6);
     }
     text-align: center;
@@ -33,10 +33,10 @@
   }
 
   .datepicker-date-input {
-    width: 80px;
+    width: 76px;
   }
   .datepicker-time-input {
-    width: 46px;
+    width: 42px;
   }
   .icon-arrow-right {
     padding-left: 0;
